<resources>
    <string name="app_name">ChatDoPlenaApp</string>
    <string name="username_text">Nome de usuário</string>
    <string name="username_field">plenamente123</string>
    <string name="password_text">Senha</string>
    <string name="password_field">••••••••</string>
    <string name="button_entrar">Entrar</string>
    <string name="plena">PLENA</string>
    <string name="restart_logged">Você está logado como</string>
    <string name="logout">Deslogar</string>
    <string name="user_management">Gerenciamento de Usuário</string>
    <string name="room_management">Gerenciamento de Salas</string>
    <string name="admin_chat">Chat</string>
    <string name="main_title">Chat do Plena</string>
    <string name="backToMenu">Voltar ao Menu</string>
    <string name="allRooms">SALAS</string>
    <string name="send">Digite algo…</string>
    <string name="create_user">Criar usuário</string>
    <string name="remove_user">Remover usuário</string>
    <string name="change_user">Alterar usuário</string>
    <string name="create_room">Criar sala</string>
    <string name="add_user_to_room">Adicionar usuário a uma sala</string>
    <string name="remove_user_from_room">Remover usuário de uma sala</string>
    <string name="user_to_be_removed">Usuário a ser removido</string>
    <string name="bt_remove">Remover</string>
    <string name="remove_room">Remover sala</string>
    <string name="room_to_be_removed">Sala a ser removida</string>
    <string name="user">Usuário</string>
    <string name="room">Sala</string>
    <string name="bt_add">Adicionar</string>
    <string name="bt_create">Criar</string>
    <string name="e_mail">E-mail</string>
    <string name="password_retype">Redigite a senha</string>
    <string name="password_hint">contato@mail.com</string>
    <string name="user_type">Tipo de usuário</string>
    <string name="admin">Admin</string>
    <string name="regular">Regular</string>
    <string name="change_password">Alterar senha</string>
    <string name="change_email">Alterar e-mail</string>
    <string name="bt_change">Alterar</string>
    <string name="new_password">Digite nova senha</string>
</resources>
