<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/modak"
        android:text="@string/plena"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@color/colorAccent"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:autofillHints="@string/username_field"
        android:background="@color/cinza_background"
        android:ems="10"
        android:hint="@string/username_field"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorAccent"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:autofillHints="@string/password_field"
        android:background="@color/cinza_background"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorAccent"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="80dp"
        android:background="@color/blue_button"
        android:fontFamily="sans-serif"
        android:onClick="startNewActivity"
        android:text="@string/button_entrar"
        android:textColor="@android:color/white" />
</LinearLayout>