<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CreateUser">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textAlignment="center"
        android:textColor="#b0e0e6"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/username_field"
        android:background="@drawable/rounded_login"
        android:ems="10"
        android:hint="@string/username_field"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingHorizontal="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#3E0E0E0E"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/e_mail"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/password_hint"
        android:background="@drawable/rounded_login"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingHorizontal="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#3E0E0E0E"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/username_field"
        android:background="@drawable/rounded_login"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingHorizontal="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#3E0E0E0E"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_retype"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/username_field"
        android:background="@drawable/rounded_login"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:paddingBottom="5dp"
        android:paddingHorizontal="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="#3E0E0E0E"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_type"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginBottom="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText4" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/admin"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/regular"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/bt_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_create"
        android:onClick="onClickCreateUser"
        android:background="@drawable/my_button"
        android:textColor="@android:color/white"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio"/>

</android.support.constraint.ConstraintLayout>