<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/admin_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="#b0e0e6"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_room_create"/>

    <Button
        android:id="@+id/bt_room_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_room"
        android:background="@drawable/my_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="250dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_room_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_room"
        android:textColor="@android:color/white"
        android:background="@drawable/my_button"
        android:layout_margin="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_room_create"/>

    <Button
        android:id="@+id/bt_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_to_room"
        android:textColor="@android:color/white"
        android:background="@drawable/my_button"
        android:layout_margin="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_room_remove"/>

    <Button
        android:id="@+id/bt_remove_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_user_from_room"
        android:onClick="onClickChat"
        android:background="@drawable/my_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_add_user" />

</android.support.constraint.ConstraintLayout>