<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AdminSignedIn">

    <TextView
        android:id="@+id/admin_main_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="#b0e0e6"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_user_management"/>

    <Button
        android:id="@+id/bt_user_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_management"
        android:background="@drawable/my_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="250dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_room_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_management"
        android:textColor="@android:color/white"
        android:background="@drawable/my_button"
        android:layout_margin="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_user_management"/>

    <Button
        android:id="@+id/bt_admin_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_chat"
        android:onClick="onClickChat"
        android:background="@drawable/my_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_room_management" />


</android.support.constraint.ConstraintLayout>