<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10sp">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/voltar"
        android:minWidth="64dip"
        android:onClick="back"
        app:layout_constraintEnd_toStartOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#247BA0"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/constLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10sp"
        android:background="?android:attr/colorBackground"
        app:layout_constraintBottom_toTopOf="@id/send_bt"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/button6"
        tools:layout_editor_absoluteX="10dp">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="7dp" />
    </android.support.design.widget.CoordinatorLayout>

    <EditText
        android:id="@+id/edit_chat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autofillHints="@string/admin_chat"
        android:background="@drawable/rounded_login"
        android:hint="@string/send"
        android:inputType="text"
        android:labelFor="@id/send_bt"
        android:paddingHorizontal="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/send_bt"
        app:layout_constraintTop_toBottomOf="@id/constLayout" />

    <Button
        android:id="@+id/send_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/my_button"
        android:onClick="sendMessage"
        android:text="@string/plena"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_chat"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>